WB-78: fixed unmodifiable list bugs